# dune-config

./: .gitignore  CMakeLists.txt  README.md
cfg/dune/: smoke.jsonnet
cfg/dune/phlex/: README.md  sinks.jsonnet  sources.jsonnet  sp-job.jsonnet  workflow.jsonnet
cfg/dune/phlex/job/: README.md
cfg/dune/wct/: detectors.jsonnet
cfg/dune/wct/detectors/: README.md
cfg/dune/wct/detectors/pdhd/: detector.jsonnet  sp-filters.jsonnet
cfg/dune/wct/detectors/pdvd/: detector.jsonnet  sp-filters.jsonnet
cfg/dune/wct/job/: README.md  parts.jsonnet  sigproc.jsonnet  sim-sigproc.jsonnet  sim.jsonnet  splat.jsonnet
cfg/dune/wct/lib/: README.md  ends.jsonnet  graph.jsonnet  schema.jsonnet  variant.jsonnet
test/: README.md  check-golden.sh  compare-references.sh  compare_frames_npz.py  compare_wct_configs.py  ends-test.jsonnet  graph-test.jsonnet  integration-run.sh  job-test.jsonnet  pdhd-test.jsonnet  pdhd-variant-test.jsonnet  pdvd-test.jsonnet  phlex-test.jsonnet  schema-variant-test.jsonnet  smoke-workflow.jsonnet  sp-swap-test.jsonnet
test/golden/: pdhd-sigproc-a0-real.json  pdhd-sigproc-a0.json  pdhd-sim-a0.json  pdhd-sim-sigproc-a0-real.json  pdhd-sim-sigproc-a0.json  pdhd-splat-a0.json  pdvd-sigproc-a0.json  pdvd-sigproc-a4.json  pdvd-sim-a0.json  pdvd-sim-a4.json  pdvd-sim-sigproc-a0.json  pdvd-splat-a0.json
